--- a/PetProject++/src/main/resources/mascotaPerdida.html
+++ b/PetProject++/src/main/resources/mascotaPerdida.html
@@ -76,10 +76,6 @@
                     <div class="row border-top border-secondary">
 
                         <div class="col-12 ">
-                            <label for=" " class="form-label mt-4"> Nombre</label>
-                            <input type="text " class="form-control ">
-                            <label for=" " class="form-label "> Apellido</label>
-                            <input type="text " class="form-control ">
                             <label for="exampleFormControlInput1 " class="form-label ">Email </label>
                             <input type="email " class="form-control " id="exampleFormControlInput1 " placeholder="nombre@ejemplo.com ">
                             <label for=" " class="form-label "> Telefono</label>
@@ -101,8 +97,17 @@
                     </div>
                     <h3 class="mt-4">Datos de la Mascota</h3>
                     <div class="row border-top border-secondary">
-
                         <div class="col-12 ">
+                            <div class="row">
+                                <div class="col-3">
+                                    <label for="" class="form-label ">Especie</label>
+                                    <select class="form-select">
+                                        <option value="PERRO">Perro</option>
+                                        <option value="GATO">Gato</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <br>
                             <div class="row">
                                 <div class="col-9">
                                     <label for="" class="form-label">Agregar Imagen</label>
@@ -113,9 +118,79 @@
                                     <input type="text" class="form-control">
                                 </div>
                             </div>
-
+                            <br>
+                            <div class="row">
+                                <label for="" class="form-label">Sexo</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="Hembra" checked>
+                                    <label class="form-check-label" for="flexRadioDefault1">
+                                      Hembra
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="Macho">
+                                    <label class="form-check-label" for="flexRadioDefault2">
+                                      Macho
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="Desconoce" >
+                                    <label class="form-check-label" for="flexRadioDefault2">
+                                      Desconoce
+                                    </label>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <label for="" class="form-label">Caracteristicas</label>
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                      Tranquilo
+                                    </label>
+                                </div>
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                      Pacifico
+                                    </label>
+                                </div>
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                      Manso
+                                    </label>
+                                </div>
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                      Delgado
+                                    </label>
+                                </div>
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                      Amistoso
+                                    </label>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <h3>Caracteristicas especificas</h3>
+                                <label for="" class="form-label">Raza</label>
+                                <input type="text" class="form-control">
+                                <label for="" class="form-label">Color Principal</label>
+                                <input type="text" class="form-control">
+                                <label for="" class="form-label">Color Secundario</label>
+                                <input type="text" class="form-control">
+                                <label for="" class="form-label">Patrondistintivo</label>
+                                <input type="text" class="form-control">
+    
+                            </div>
+                            <br>
                             <label for=" " class="form-label "> Descripcion de la mascota</label>
                             <textarea name="" id="" class="form-control"></textarea>
+                            <br>
                             <label for="exampleFormControlInput1 " class="form-label ">Direccion donde se encontro</label>
                             <input type="text " class="form-control ">
                             <div class="row mt-5">
