--- a/PetProject++/src/main/resources/registrarMascota.html
+++ b/PetProject++/src/main/resources/registrarMascota.html
@@ -74,7 +74,10 @@
                             <label for="" class="form-label ">Nombre</label>
                             <input type="text" class="form-control">
                             <label for="" class="form-label ">Especie</label>
-                            <input type="text" class="form-control">
+                            <select class="form-select">
+                                <option value="PERRO">Perro</option>
+                                <option value="GATO">Gato</option>
+                            </select>
                             <label for="Fecha" class="form-label ">Fecha de nacimiento</label>
                             <input type="date" class="form-control">
                             <label for="Fecha" class="form-label ">sexo</label>
@@ -105,7 +108,7 @@
 
                         <div class="col-6">
                             <h3>Caracteristicas generales</h3>
-                            <label for="" class="form-label">Tamano</label>
+                            <label for="" class="form-label">Tamaño</label>
                             <input type="text" class="form-control">
                             <div class="form-check mt-2">
                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -152,8 +155,6 @@
                         <div class="col-12 d-flex justify-content-center">
                             <div>
                                 <button type="submit" class="col-12 btn btn-dark mb-3 mt-5" style="background-color: blueviolet;">Enviar</button>
-
-
                             </div>
                         </div>
                     </div>
@@ -162,8 +163,6 @@
             </div>
         </div>
     </main>
-
-
     <script src="js/bootstrap.bundle.min.js "></script>
 </body>
 
