--- a/PetProject++/src/main/resources/index2.html
+++ b/PetProject++/src/main/resources/index2.html
@@ -40,7 +40,7 @@
           </li>
         </ul>
           <form class="d-flex">
-            <button class="btn btn-dark" type="button" onclick="location.href = './inicio.html';">LogIn</button>
+            <button class="btn btn-dark" type="button" onclick="location.href = 'logIn.html';">LogIn</button>
           </form>
         </div>
       </div>
