--- a/PetProject++/src/main/resources/formularioUsuario.html
+++ b/PetProject++/src/main/resources/formularioUsuario.html
@@ -10,147 +10,271 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="formularioUsuario.css">
+    <link rel="stylesheet" href="./css/formularioUsuario.css">
     <script src="js/formularioUsuario.js"></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
 </head>
 
 <body>
-    <header>
-        <!--========================================================== -->
-        <!-- ENCABEZADO -->
-        <!--========================================================== -->
-        <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
-            <a class="navbar-brand" rel="home" href="#">
-                <img style="max-width:100px;" src="./img/Logo/negro2.png">
+<header>
+    <!--========================================================== -->
+    <!-- ENCABEZADO -->
+    <!--========================================================== -->
+    <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
+        <a class="navbar-brand" rel="home" href="#">
+            <img style="max-width:100px;" src="./img/Logo/negro2.png">
+        </a>
+        <div class="container">
+            <a class="navbar-brand" href="./inicio.html">
+                <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
             </a>
-            <div class="container">
-                <a class="navbar-brand" href="./index.html">
-                    <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#servicios-mascotas">Mascotas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#seccion-contacto">Contactos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#seccion-contacto">Sistema</a>
-                        </li>
-                    </ul>
-                    <a href="perfil.html" class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="volver">
-        <a href="" class="volver"><i class="fas fa-angle-double-left"></i>volver </a>
-    </div>
-    <main class="container">
-
-        <h1>Registro de usuario</h1>
-        <div class="row">
-            <div class="col-12">
-                <div class="row">
-                    <div class="col-12 d-flex justify-content-center tamanoContenedorPasos mt-5">
-                        <div class="seleccionar">
-                            <p class="numeroPaso ">1</p>
-                        </div>
-                        <div class="paso paso2">
-                            <p>2</p>
-                        </div>
-                        <div class="paso">
-                            <p>3</p>
-                        </div>
-                    </div>
-                </div>
-                <form action="" class="border-top border-2 border-dark  ">
-
-                    <div class="row mb-4 mt-5 ">
-                        <div class="col-6">
-                            <label for="Nombre" class="form-label">Nombre*</label>
-                        </div>
-                        <div class="col-6">
-                            <input type="text" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row mb-4">
-                        <div class="col-6">
-                            <label for="apellido" class="form-label">Apellido*</label>
-                        </div>
-                        <div class="col-6">
-                            <input type="text" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row mb-4">
-                        <div class="col-6">
-                            <label for="DNI" class="form-label">DNI*</label>
-                        </div>
-                        <div class="col-6">
-                            <div class="row">
-                                <div class="col-6">
-                                    <select name="dni" id="" class="form-select">
-                                        <option value="dni">Dni</option>
-                                        <option value="dni">Dni</option>
-                                        <option value="dni">Dni</option>
-                                    </select>
-                                </div>
-                                <div class="col-6">
-                                    <input type="text" class="form-control">
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="row mb-4">
-                        <div class="col-6">
-                            <label for="Contraseña" class="form-label">Contraseña*</label>
-                        </div>
-                        <div class="col-6">
-                            <input type="password" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row mb-4">
-                        <div class="col-6">
-                            <label for="Contraseña" class="form-label">Confirmar contraseña*</label>
-                        </div>
-                        <div class="col-6">
-                            <input type="password" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row mb-4">
-                        <div class="col-6">
-                            <label for="Fecha" class="form-label">Fecha de nacimiento</label>
-                        </div>
-                        <div class="col-6">
-                            <input type="date" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row mt-6 d-flex justify-content-center">
-                        <div class="col-12 d-flex justify-content-evenly botonesRegistro">
-                            <div>
-                                <button type="button" class="col-12 btn btn-dark mb-3 mt-5" onclick="validar()" style="background-color :blueviolet; width: 150px;">Cancelar</button>
-
-                            </div>
-                            <div>
-                                <button type="button" class="col-12 btn btn-dark mb-3 mt-5" onclick="validar()" style="background-color :blueviolet; width: 150px;">Continuar</button>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#servicios-mascotas">Mascotas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#seccion-contacto">Contactos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#seccion-contacto">Sistema</a>
+                    </li>
+                </ul>
+                <a href="perfil.html" class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
             </div>
         </div>
+    </nav>
+</header>
+<div class="volver">
+    <a href="" class="volver"><i class="fas fa-angle-double-left"></i>volver </a>
+</div>
+<main class="container">
+
+    <h1 class="tituloFormulario">Registro de usuario</h1>
+    <div class="row">
+        <div class="col-12">
+
+
+            <form action="../users" method="post" class="border-top border-2 border-dark  ">
+
+                <div class="row mb-4 mt-3 ">
+                    <div class="col-6">
+                        <label for="Nombre" class="form-label">Nombre*</label>
+                    </div>
+                    <div class="col-6">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-6">
+                        <label for="apellido" class="form-label">Apellido*</label>
+                    </div>
+                    <div class="col-6">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-6">
+                        <label for="DNI" class="form-label">DNI*</label>
+                    </div>
+                    <div class="col-6">
+                        <div class="row">
+                            <div class="col-6">
+                                <select name="dni" id="" class="form-select">
+                                    <option value="dni">Dni</option>
+                                    <option value="dni">Dni</option>
+                                    <option value="dni">Dni</option>
+                                </select>
+                            </div>
+                            <div class="col-6">
+                                <input type="text" class="form-control">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-6">
+                        <label for="Contraseña" class="form-label">Contraseña*</label>
+                    </div>
+                    <div class="col-6">
+                        <input type="password" class="form-control">
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-6">
+                        <label for="Contraseña" class="form-label">Confirmar contraseña*</label>
+                    </div>
+                    <div class="col-6">
+                        <input type="password" class="form-control">
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-6">
+                        <label for="Fecha" class="form-label">Fecha de nacimiento</label>
+                    </div>
+                    <div class="col-6">
+                        <input type="date" class="form-control">
+                    </div>
+                </div>
+
+                <h3 class="mt-3">Detalles de contacto</h3>
+                <div class="row mt-3">
+                    <div class="col-6">
+
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="calle" class="form-label">Calle</label>
+                            </div>
+                            <div class="col-6">
+                                <input type="text" class="form-control">
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="col-6">
+
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="calle" class="form-label">Numero</label>
+                            </div>
+                            <div class="col-6">
+                                <input type="text" class="form-control">
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6">
+
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="calle" class="form-label">Dtpo</label>
+                            </div>
+                            <div class="col-6">
+                                <input type="text" class="form-control">
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="col-6">
+
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="calle" class="form-label">Codigo postal</label>
+                            </div>
+                            <div class="col-6">
+                                <input type="text" class="form-control">
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6">
+
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="calle" class="form-label">Barrio</label>
+                            </div>
+                            <div class="col-6">
+                                <input type="text" class="form-control">
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="col-6">
+
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="calle" class="form-label">Provincia</label>
+                            </div>
+                            <div class="col-6">
+                                <select name="" id="" class="form-select">
+                                    <option value="Buenos Aires">Buenos aires</option>
+                                    <option value="Buenos Aires">Cordoba</option>
+                                    <option value="Buenos Aires"> Santa Fe</option>
+                                    <option value="Buenos Aires">Entre Rios</option>
+                                </select>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="row mt-3">
+                    <div class="col-12">
+                        <div class="row ">
+                            <div class="col-3">
+                                <label for="" class="form-label">
+                                    Telefono*
+                                </label>
+                            </div>
+                            <div class="col-9">
+                                <input type="text" class="form-control">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-12">
+                        <div class="row ">
+                            <div class="col-3">
+                                <label for="" class="form-label">
+                                    Correo*
+                                </label>
+                            </div>
+                            <div class="col-9">
+                                <input type="text" class="form-control" placeholder="Ejemplo@gmail.com">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-center">
+                    <div class="col-12 d-flex justify-content-evenly " style="width:600px">
+                        <div>
+                            <button type="button" class="col-12 btn btn-dark mb-3 mt-5" onclick="validar()" style="background-color :blueviolet; width: 150px;">Cancelar</button>
+
+                        </div>
+                        <div>
+                            <button type="submit" class="col-12 btn btn-dark mb-3 mt-5" onclick="validar()" style="background-color :blueviolet; width: 150px;">Enviar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                        <div>
+                            <div class="form-check mb-3 ">
+                                <input type="checkbox" name="terminos" class="form-check-input">
+                                <label for="terminos" class="form-check-label terminos">Terminos y condiciones</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </form>
+
+        </div>
+    </div>
 
 
     </main>
     <script src="js/bootstrap.bundle.min.js "></script>
-</body>
+    </body>
 
-</html>
+    </html>
