--- a/PetProject++/src/main/resources/pantallaAdmin.html
+++ b/PetProject++/src/main/resources/pantallaAdmin.html
@@ -24,7 +24,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('img/banner.PNG')">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="./inicio.html">
                 <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
