--- a/PetProject++/src/main/resources/paso2.html
+++ b/PetProject++/src/main/resources/paso2.html
@@ -26,7 +26,7 @@
                 <img style="max-width:100px;" src="./img/Logo/negro2.png">
             </a>
             <div class="container">
-                <a class="navbar-brand" href="./index.html">
+                <a class="navbar-brand" href="./inicio.html">
                     <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
