--- a/PetProject++/src/main/resources/mascotaPerdida.html
+++ b/PetProject++/src/main/resources/mascotaPerdida.html
@@ -53,11 +53,11 @@
                     <div class="row">
                         <div class="col-6">
                             <label for="" class="form-label "> Nombre</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id='inputNombre'required>
                             <label for="" class="form-label "> Apellido</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id='inputApellidos' required>
                             <label for="Fecha" class="form-label ">Fecha de nacimiento</label>
-                            <input type="date" class="form-control">
+                            <input type="date" class="form-control" id='inputFecha'>
                         </div>
                         <div class="col-6">
                             <label for="" class="form-label "> Tipo de Documento</label>
@@ -67,9 +67,9 @@
                                 <option value="dni">Dni</option>
                             </select>
                             <label for="" class="form-label mt-2 "> Numero</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id='inputNumero'>
                             <label for="" class="form-label "> Direccion</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id='inpuDireccion'>
                         </div>
                     </div>
                     <h3 class="mt-4">Datos de Contacto</h3>
@@ -77,9 +77,9 @@
 
                         <div class="col-12 ">
                             <label for="exampleFormControlInput1 " class="form-label ">Email </label>
-                            <input type="email " class="form-control " id="exampleFormControlInput1 " placeholder="nombre@ejemplo.com ">
+                            <input type="email " class="form-control " id="email" placeholder="nombre@ejemplo.com " >
                             <label for=" " class="form-label "> Telefono</label>
-                            <input type="text " class="form-control" placeholder="ej:12345678">
+                            <input type="text " class="form-control" placeholder="ej:12345678" id='telefono'>
                             <label for="Fecha" class="form-label ">Preferencia de contacto</label>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="Hembra">
