--- a/PetProject++/src/main/resources/logIn.html
+++ b/PetProject++/src/main/resources/logIn.html
@@ -18,7 +18,7 @@
                         <!-- ENCABEZADO -->
   <!--========================================================== -->
   <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
-      <a class="navbar-brand"  href="./index2.html" rel="home" href="#">
+      <a class="navbar-brand" href="./index_general.html" rel="home" href="#">
         <img style="max-width:100px;"
             src="./img/Logo/negro2.png">
       </a>
