--- a/PetProject++/src/main/resources/indexPrueba.html
+++ b/PetProject++/src/main/resources/indexPrueba.html
@@ -15,7 +15,7 @@
   <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
   <!-- Nuestro css-->
-  <link rel="stylesheet" type="text/css" href="../static/css/indexPrueba.css" th:href="@{/css/indexPrueba.css}">
+  <link rel="stylesheet" type="text/css" href="../static/css/indexPrueba.css" th:href="@{/static/css/indexPrueba.css}">
 
 </head>
 <body>
@@ -23,7 +23,7 @@
   <div class="col-sm-8 main-section">
     <div class="modal-content">
       <div class="col-12 user-img">
-        <img src="../static/img/user.png" th:src="@{img/user.png}"/>
+        <img src="../static/img/user.png" th:src="@{/static/img/user.png}"/>
       </div>
       <form class="col-12" th:action="@{/login}" method="post">
         <div class="form-group" id="user-group">
