cambio en el front

--- a/PetProject++/src/main/resources/inicio.html
+++ b/PetProject++/src/main/resources/inicio.html
@@ -41,6 +41,7 @@
             </li>
           </ul>
           <a href="perfil.html"class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+          <button class="logOut">Log Out</button>
         </div>
       </div>
     </nav>
