--- a/PetProject++/src/main/resources/formularioUsuario.html
+++ b/PetProject++/src/main/resources/formularioUsuario.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/formularioUsuario.css">
-    <script src="js/formularioUsuario.js"></script>
+    <script src="./static/js/formularioUsuario.js"></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
 </head>
@@ -99,18 +99,24 @@
                 </div>
                 <div class="row mb-4">
                     <div class="col-6">
-                        <label for="Contraseña" class="form-label">Contraseña*</label>
+                        <label for="Contraseña" class="form-label" >Contraseña*</label>
                     </div>
                     <div class="col-6">
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" id="password" onblur='validarContrasena()'>
+                        <div id="validationServer03Feedback" class="invalid-feedback">
+                            Las contraseñas debe contener al menos un numero, una mayuscula , una minuscula y un caracter especial
+                          </div>
                     </div>
                 </div>
                 <div class="row mb-4">
                     <div class="col-6">
-                        <label for="Contraseña" class="form-label">Confirmar contraseña*</label>
+                        <label for="Contraseña" class="form-label"  >Confirmar contraseña*</label>
                     </div>
                     <div class="col-6">
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" id='confCont' onblur="confirmarContrasena()">
+                        <div id="validationServer03Feedback" class="invalid-feedback">
+                            Las contraseñas son distintas
+                          </div>
                     </div>
                 </div>
                 <div class="row mb-4">
