--- a/PetProject++/src/main/resources/mascotas-encontradas.html
+++ b/PetProject++/src/main/resources/mascotas-encontradas.html
@@ -9,7 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./static/css/modal.css">
     <script src="js/mascotas-encontradas.js"></script>
+    <script src="./static/js/jquery-3.6.0.min.js"></script>
     <title>Diseño de sistemas</title>
   </head>
   <body>
@@ -75,6 +77,7 @@
                     Encontrado el 21/05/2021
                 </p>
                 <a href="detalle-mascota-encontrada.html" class="btn btn-secondary" style="background-color: blueviolet;">Detalle</a>
+                  <button class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">Contactar</button>
               </div>
             </div>
           </div>
@@ -135,7 +138,7 @@
                 <p class="card-text">
                     Encontrado el 01/01/2021
                 </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Detalle</a>
+                <a href="#!" c>Detalle</a>
               </div>
             </div>
           </div>
@@ -338,6 +341,30 @@
       <a href="#"><i class="bi bi-instagram"></i></a>  
   </div>
 </footer>
+  <div class="pop-up verModal" id='popUp'>
+    <div class="pop-wrap">
+      <div class="pop-mensaje">
+        <div class="salir">
+          <div class="sal-mod" onclick="salir()">
+            <p>x</p>
+          </div>
+          
+        </div>
+        <div class="titulo">
+          <h3>Mensaje para Rescatista</h3>
+        </div>
+        <form action="" class="form">
+          <div class="textArea">
+            <textarea class="form-control" aria-label="With textarea" cols="40" rows="5" placeholder="redacte su mensaje"></textarea>
+          </div>
+          <div class="boton">
+            <button type="button" class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">enviar</button>
+          </div>
+         
+        </form>
+      </div>
+    </div>
+  </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script> 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
