--- a/PetProject++/src/main/resources/pantallaAdmin2.html
+++ b/PetProject++/src/main/resources/pantallaAdmin2.html
@@ -67,6 +67,18 @@
                             <label for="" class="form-label ">Ancho</label>
                             <input type="text" class="form-control">
                         </div>
+                        <div class="col-6">
+                            <h3>agregar vonluntario</h3>
+                            <label for="" class="form-label ">Nombre voluntario</label>
+                            <div class="input-group ">
+                                <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                                <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
+                              </div>
+                              <div class="contains-boton mt-4 d-flex justify-content-center">
+                                <button type="button" class="btn btn-primary" style="margin-right: 10px;">agregar</button>
+                                <button type="button" class="btn btn-primary">eliminar</button>
+                              </div>
+                        </div>
 
                     </div>
                     <h3 class="mt-3">Agregar preguntas</h3>
